# guard-contest

./: .gitignore  README.md  aggregates_and_model_features.txt  idea.txt  instructions.txt  to_add.txt
boosting_lr_stack/: __init__.py  model.py  predict.py  train.py
code/: config.py  evaluate_on_train.py  features.py  parquet_batch_aggregates.py  predict_and_evaluate.py  prepare_training_data.py  run_pipeline.py  train_model.py
code/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
code/scripts/: inspect_parquet.py  records_per_customer.py
data/: README.md  train_labels.md
data/test/: pretest.md  test.md
data/train/: pretrain_part_1.md  pretrain_part_2.md  pretrain_part_3.md  train_part_1.md  train_part_2.md  train_part_3.md
dataset/: __init__.py  main.py
dataset_cpp/: CMakeLists.txt  build_dataset.cpp  build_global_aggregates.cpp  dataset_cpp_module_spec.txt  global_category_features.hpp  progress.hpp
docs/: category_aggregate_features_spec.txt  category_aggregates_pipeline_implementation.txt  contest_readme.md  cpp_dataset_features.md
output/research/: feature_importance_per_model.csv  feature_importance_permutation_full_ranking.txt  feature_importance_report.md  feature_importance_report.txt  feature_importance_summary.csv  feature_ranking_all.txt  xgb_feature_importance.json  xgb_forward_selection_history.csv  xgb_forward_selection_history.jsonl  xgb_native_importance.csv
output/weights/: model_torch.pt
requirements/: environment_cpp.yml  environment_python.yml
research/: __init__.py  main.py
scripts/: README.md  audit_event_dttm_parse.py  check_global_aggregates_parquet_types.py  check_pretrain_train_customer_disjoint.py  count_is_amount_high.py  count_train_transactions_label_presence.py  cpp_python_global_feature_parity.py  data_transactions_distribution.py  diagnose_operaton_amt_raw.py  feature_stats.py  feature_target_correlation.py  inspect_parquet_schema.py  inspect_train_parquet_schema.py  investigate_mcc_minus2.py  median_tr_amount.py  merge_train_dataset_parts.py  pretest_user_txn_percentiles.py  run_catboost_main_xgb_grid.py  run_training_pipeline.py  run_xgb_grid_then_catboost.py  slice_parquet_head.py  validate_smoke_dataset.py
scripts/user_record_distribution/: analyze_user_record_distribution.py  user_record_distribution_report.txt
shared/: __init__.py  config.py  dataset_settings.py  features.py  global_category_aggregates.py  parquet_batch_aggregates.py  train_dataset.py
submission/: README.md  __init__.py  catboost_disk_infer.py  main.py
tests/: __init__.py  test_build_dataset_cpp.py
torch_logic/: README.txt  __init__.py  data.py  mlp_model.py  model.py  predict.py  predict_mlp.py  train.py  train_mlp.py
torch_model/: __init__.py  model.py  predict.py  train.py
training/: __init__.py  cat_train.py  catboost_train.py  catboost_tsv_cpp.py  config.py  logistic_regression.py  main.py  parquet_io.py  pytorch_model.py  random_forest.py  xgb_grid_search.py  xgb_iterative_fit.py
training/cpp/: CMakeLists.txt  README.txt  parquet_to_catboost_tsv.cpp
training_gpu/: __init__.py  main.py
xgb_forward_selection/: __init__.py  __main__.py  main.py
(+5 files in other folders)
